<resources>
    <string name="app_name">AltTest</string>
    <string name="action_settings">Settings</string>
    <string name="note_title">Note title:</string>
    <string name="note_content">Content:</string>
    <string name="hint_title">Enter title of yor note</string>
    <string name="hint_content">Enter content of your note here</string>
    <string name="deleting_title">Deleting</string>
    <string name="deleting_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_title">Add your first note!</string>
    <string name="empty_content">Click "+" button to add your first note</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Please, enter the title</string>
    <string name="exported">Note exported! See "Documents" folder</string>
    <string name="importance">Importance:</string>
    <string-array name="importance_list">
        <item>Unknown</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="photo">Photo:</string>
    <string name="delete_photo">Delete photo</string>
    <string name="place">Place:</string>
    <string name="choose">Choose</string>
    <string name="location_disabled">Current location unavailable. Please, turn on gps and try again</string>
</resources>
